tests/snapshots/regression/semantic_types__effects__incomplete_handler_error.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/effects/incomplete_handler_error.flx
exit_code: 1

[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
• 1 error • tests/fixtures/semantic_types/effects/incomplete_handler_error.flx
error[E402]: Missing Effect Handler Arm

Handler for `Console` is missing operations: read.

  tests/fixtures/semantic_types/effects/incomplete_handler_error.flx:7:5
  |
7 |     print("hello") handle Console {
  |     ^^^^^^^^^^^^^^
  |     -------------- handled expression

Hint:
  Add handler arms for all declared operations of the effect.
